# IPFS-Flutter

./: .gitignore  pubspec.yaml
docs/compose/plans/: 2026-06-21-mopro-integration.md
docs/compose/reports/: mopro-integration.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: config.dart  main.dart
example/lib/screens/: add_screen.dart  cat_screen.dart  get_screen.dart  home_screen.dart  id_screen.dart  ls_screen.dart  pubsub_screen.dart  swarm_screen.dart  zk_screen.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/src/response/: add.dart  add.g.dart  cat.dart  cat.g.dart  id.dart  id.g.dart  ls.dart  ls.g.dart  pubsub_peers.dart  pubsub_peers.g.dart  swarm.dart  swarm.g.dart
lib/src/service/: ipfs.dart  ipfs_service.chopper.dart  ipfs_service.dart  json_to_type_converter.dart
mopro_flutter_bindings/: README.md  pubspec.yaml
mopro_flutter_bindings/android/: build.gradle
mopro_flutter_bindings/cargokit/gradle/: plugin.gradle
mopro_flutter_bindings/lib/: mopro_flutter_bindings.dart
mopro_flutter_bindings/rust/: Cargo.toml
test/: ipfs_test.dart
(+2 files in other folders)
